--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-This is the simple process of Making Color-Magnitude diagram aslo called Hertzsprung-Russel diagram using Gaia datasets. I used cubis spline to clean the outlers below Main sequence turnoff 
+This is the simple process of Making Color-Magnitude diagram aslo called Hertzsprung-Russel diagram using Gaia datasets. I used cubis spline to clean the outlers below Main sequence turnoff. 
